# automaxo

./: .gitignore  .openai_cache.db  404.html  LICENSE  Makefile  README.md  conf.py  example.txt  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  results.py  run_all_code.ipynb  sitemap.xml
.litellm_cache/: cache.db-shm
data/: cystic_fibrosis_mesh_replaced.tsv  cystic_fibrosis_no_replaced.tsv  cystic_fibrosis_poet_replaced.tsv  marfan_syndrome_mesh_replaced.tsv  marfan_syndrome_poet_replaced.tsv  mesh_sets.tsv  mesh_target_ids.tsv  morphine_mesh_replaced.tsv  morphine_no_replaced.tsv  morphine_poet_replaced.tsv  post_ontoGPT_cystic_fibrosis.json  sickle_cell_mesh_replaced.tsv  sickle_cell_no_replaced.tsv  sickle_cell_poet_replaced.tsv
data_old/: mesh_target_ids.tsv
docs/: data.md  index.md  install.md  tutorial.md
evaluation/: automaxo_curator_feedback.xlsx  detailed_post_ontoGPT.json  disease_analysis.ipynb  disease_analysis_new.ipynb  disease_summary_0.0.tsv  disease_summary_1.0.tsv  disease_summary_2.0.tsv  disease_summary_automaxo.xlsx  evaluation_analysis.ipynb  evaluation_detailed_post_ontoGPT.json  evaluation_mesh_replaced.tsv  evaluation_no_replacement.tsv  evaluation_no_replacement_1.tsv  evaluation_post_ontoGPT.json  evaluation_post_ontoGPT_old.json  evaluation_selected_pmid_mesh_info.json  evaluation_selected_pmid_mesh_info_1.json  final_automaxo_evaluation_.xlsx  final_automaxo_results.json  full_disease_analysis_all_diseases.xlsx  full_maxo_final_curation.xlsx  harry_curration_automaxo.xlsx  hpo_evaluation_final_automaxo_merged.xlsx  maxo-annotations.tsv  maxo_annotations_evaluation.ipynb  maxo_evaluation_final_automaxo_merged.xlsx  maxo_final_curation.xlsx  merged_curation_automaxo.xlsx  mondo_evaluation_final_automaxo_merged.xlsx  pubmed_article_fetcher_evaluation.py  pubmed_article_fetcher_evaluation_1.py  results_analysis.ipynb  results_analysis_0.0.ipynb  results_analysis_1.0.ipynb  results_analysis_2.0.ipynb  selected_pmid_mesh_info.json  visualization.r  visualization_df_1.0.tsv  visualization_df_2.0.tsv
install/: index.html
llm_evaluation/: disease_summary_gpt_4.xlsx  disease_summary_gpt_4_all.xlsx  disease_summary_gpt_4_all_diseases.xlsx  disease_summary_gpt_4o_mini.xlsx  disease_summary_llama.xlsx  full_disease_analysis_gpt_4.xlsx  full_disease_analysis_gpt_4_all.xlsx  full_disease_analysis_gpt_4_all_diseases.xlsx  full_disease_analysis_gpt_4o_mini.xlsx  full_disease_analysis_llama.xlsx  llm_analysis.ipynb
ml_optimisation/: Automaxo_Bert_Optimisation.ipynb  Negative_Selected.csv  Negative_Selected.numbers  Negative_Selected.tsv  automaxo_annots.tsv  combined_filtered_df.tsv  fine_tune_pubmedbert.py  finetune_pubmedbert_model.ipynb  load_bert_model.ipynb  loading_finetuned_bert_model.ipynb  negative.tsv  negative_jhc.csv  run_ml_optimisation.ipynb  selected_negative.tsv  testing_filtering.tsv  text-classification-using-tf-idf-and-naive-bayes.ipynb  train_bert_model.ipynb
more_grounding/: Fin_evaluation_summary_post_ontoGPT_df.xlsx  evaluation_summary_post_ontoGPT_df.xlsx  fuzy_oak_evaluation_summary_post_ontoGPT_df.xlsx  new_2_df.xlsx  new_df.xlsx  newww_sickle_cell_summary_post_ontoGPT_df.xlsx  oak_evaluation_summary_post_ontoGPT_df.xlsx  oak_sickle_cell_summary_post_ontoGPT_df.xlsx  retrived_maxo_annotations_df.xlsx  (+2 more)
(+22241 files in other folders)
